Update content with ul to speech-therapy.hmtl

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <div class="services">
             <div class="services-top-1">
                 <h3>Speech Therapy</h3>
-                <p>
-                    Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
+                <p> Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
                     disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                     or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
                     speech and voice and the speech production of the hard of hearing. </p>
@@ -76,8 +75,7 @@
             </div>
             <div class="services-top-2">
                 <h3>Occupational Therapy</h3>
-                <p>
-                    Occupational therapy is a specialized science in the field of health, which improves skills of
+                <p> Occupational therapy is a specialized science in the field of health, which improves skills of
                     people with dysfunction in the areas of development.
                 </p>
                 <h4>These areas concern:</h4>
@@ -100,7 +98,7 @@
         <div class="services">
             <div class="services-bottom-1">
                 <h3>Parental Counselling</h3>
-                <p>Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
+                <p> Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
                     turn. In the counseling sessions, the issues that concern the parents in relation to their child,
                     the family or their own role as parents are discussed. These issues may concern issues in a child's
                     behavior, emotional difficulties, difficulties in socialization or difficulties that parents face in
