--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -43,67 +43,65 @@
     <section class="therapy">
         <div class="therapy-inner">
             <h3>Speech Therapy</h3>
-            <p>Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
+            <p> Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
                 disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                 or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
                 speech and voice and the speech production of the hard of hearing. </p>
 
-                <p>From the age of about eighteen months until the day the child goes to school, he first learns sounds,
-                    then words, and finally to make sentences. But if he does not learn to speak properly, when he later
-                    goes to school he will have difficulty writing properly.
-                    Many of the children who have learning difficulties at school age had speech problems in preschool.
-                    Fortunately, however, the reverse is not the case: It is not a rule that all children who have
-                    speech
-                    problems will also develop learning problems. This is because, when speech problems are detected
-                    very
-                    early, they can be overcome relatively easily with the help of a specialist.</p>
+            <p> From the age of about eighteen months until the day the child goes to school, he first learns sounds,
+                then words, and finally to make sentences. But if he does not learn to speak properly, when he later
+                goes to school he will have difficulty writing properly.
+                Many of the children who have learning difficulties at school age had speech problems in preschool.
+                Fortunately, however, the reverse is not the case: It is not a rule that all children who have
+                speech
+                problems will also develop learning problems. This is because, when speech problems are detected
+                very
+                early, they can be overcome relatively easily with the help of a specialist.</p>
 
-                <p>For a parent to understand that their child has a learning problem, they must first join the learning
-                    process. However, from very early on there may be signs that the child will have difficulties in
-                    school.
-                    Already at the age of 2.5 years, unintelligible or difficult to understand speech is a sign that
-                    should
-                    concern parents, as it hides a complex phonological disorder that can affect his ability later to
-                    correctly decode syllables and words containing sounds that he had difficulty to produce earlier.
-                    Each
-                    person has their own pace of development. But there are certain time limits that, when exceeded,
-                    parents
-                    should seek expert advice.
-                </p>
-                <h4>Up to 12 months</h4>
-                <p>Baby reacts to sounds
-                    Makes eye contact.
-                    He recognizes his mother's voice.
-                    He smiles when you talk to him.
-                    It lives up to its name.
-                    He turns his head towards the source of the sounds.
-                    Has some basic vocabulary.
-                </p>
-                <h4>Up to 2 years old</h4>
-                <p>
-                    His vocabulary has 20-50 words.
-                    Obeys simple commands.
-                    Uses two words to form sentences.
-                    Uses various toys symbolically (e.g. feeding a baby, etc.).
-                </p>
-                <h4>Up to 3 years old</h4>
-                <p>
-                    Answers questions.
-                    Makes simple suggestions.
-                    He can watch a dialogue.
-                    He likes fairy tales and follows them easily.
-                    He asks questions.
-                </p>
-                <h4> Up to 4 years old</h4>
-                <p>
-                    It answers all kinds of questions.
-                    It is understood even by people he does not know.
-                    His speech is closer to that of adults in terms of grammar and syntax.
-                    He narrates his experiences.
-                    It is a fact that every child is different and therefore there can be some variation in the time it
-                    takes to master a skill, however the average means something and especially if it has been six
-                    months
-                    and the child is not making progress then there should be concern .</p>
+            <p> For a parent to understand that their child has a learning problem, they must first join the learning
+                process. However, from very early on there may be signs that the child will have difficulties in
+                school.
+                Already at the age of 2.5 years, unintelligible or difficult to understand speech is a sign that
+                should
+                concern parents, as it hides a complex phonological disorder that can affect his ability later to
+                correctly decode syllables and words containing sounds that he had difficulty to produce earlier.
+                Each
+                person has their own pace of development. But there are certain time limits that, when exceeded,
+                parents
+                should seek expert advice.
+            </p>
+            <h4>Up to 12 months</h4>
+            <ul>
+                <li>Baby reacts to sounds</li>
+                <li>Makes eye contact</li>
+                <li>He recognizes his mother's voice</li>
+                <li>He smiles when you talk to him</li>
+                <li>It lives up to its name</li>
+                <li>He turns his head towards the source of the sounds</li>
+                <li>Has some basic vocabulary</li>
+            </ul>
+            <h4>Up to 2 years old</h4>
+            <ul>
+                <li>His vocabulary has 20-50 words</li>
+                <li>Obeys simple commands</li>
+                <li>Uses two words to form sentences</li>
+                <li>Uses various toys symbolically (e.g. feeding a baby, etc.)</li>
+            </ul>
+            <h4>Up to 3 years old</h4>
+            <ul>
+                <li>Answers questions</li>
+                <li>Makes simple suggestions</li>
+                <li>He can watch a dialogue</li>
+                <li>He likes fairy tales and follows them easily</li>
+                <li>He asks questions</li>
+            </ul>
+            <h4> Up to 4 years old</h4>
+            <ul>
+                <li>It answers all kinds of questions</li>
+                <li>It is understood even by people he does not know</li>
+                <li>His speech is closer to that of adults in terms of grammar and syntax</li>
+                <li>He narrates his experiences</li>
+            </ul>
         </div>
         <div class="therapy-image">
             <img src="assets/images/therapies-image.jpg" alt="">
