Fix typo to index and about-us pages to right-about

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="right-about">
             <h2>Welcome to the Center for Special Treatments "Simeio"</h2>
             <p>
-                Four therapists starting from different points (different fields) joined their paths. Driven by
+                Four therapists starting from different work fields joined their paths. Driven by
                 their love for their fellow man, vision and common values, they fulfilled their dream to create a space
                 that promotes the enlightenment of the individual. Our main concern is the respect of each patient and
                 his uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic
