--- a/katerina.html
+++ b/katerina.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Simeio Therapy | About us | | Katerina Gkesou</title>
+    <title>Simeio Therapy | About us | Katerina Gkesou</title>
 </head>
 
 <body>
