Add email icon to footer and style footer

--- a/parental-counselling.html
+++ b/parental-counselling.html
@@ -104,6 +104,7 @@
                 <h3>Address</h3>
                 <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
                 <p><i class="fa-solid fa-phone"></i> 01234567890</p>
+                <p><i class="fa-solid fa-at"></i>kentrologo@gmail.com</p>
             </div>
         </div>
         <div class="copyright">
