Add favicon to title to all pages

--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Services | Occupational Therapy</title>
 </head>
@@ -41,7 +42,7 @@
     </header>
 
     <section class="therapy">
-        
+
         <div class="therapy-inner">
             <h3>Occupational Therapy</h3>
             <p>
@@ -60,7 +61,7 @@
                 <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
                     perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
             </ul>
-        
+
 
             <p>Visual and auditory perception (the individual's perception of visual and auditory stimuli) and
                 stereocognition (determining the size, texture and shape of an object).</p>
