--- a/special-education.html
+++ b/special-education.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Services | Special Education</title>
 </head>
@@ -59,7 +60,8 @@
                 <li>special instruments and means as well as special teaching techniques.</li>
             </ul>
 
-            <p><b>The role of the special educator</b> is important and extremely helpful in improving the child's learning
+            <p><b>The role of the special educator</b> is important and extremely helpful in improving the child's
+                learning
                 level. Some of the goals set in the context of special education concern the improvement of the
                 following skills:</p>
             <ul>
