--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Services | Speech Therapy</title>
 </head>
