--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Center for Special Treatment">
     <meta name="keywords"
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | Contact us</title>
 </head>
@@ -126,7 +127,7 @@
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
     </footer>
-    
+
     <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
