Change header bg-color

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
         </ul>
     </header>
-
+    <hr>
     <!-- About us and Image-->
 
     <section class="main-bg">
@@ -72,7 +72,7 @@
                     disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                     or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
                     speech and voice and the speech production of the hard of hearing. </p>
-                <p><a href="speech-therapy.html">Read more</a></p>
+                <p><a href="speech-therapy.html">Learn more about this service</a></p>
             </div>
             <div class="services-top-2">
                 <h3>Occupational Therapy</h3>
