Add dropdown menu for services to all pages

--- a/submit-form.html
+++ b/submit-form.html
@@ -32,9 +32,17 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
-            <li class="active">
+            <li>
                 <a href="about-us.html">About Us</a>
             </li>
+            <li class="dropdown">
+                <p>class="dropbtn active">Services</p>
+                <div class="dropdown-content">
+                    <a href="speech-therapy.html">Speech Therapy</a>
+                    <a href="occupational-therapy.html">Occupational Therapy</a>
+                    <a href="parental-counselling.html">Parental Counselling</a>
+                    <a href="special-education.html">Special Education</a>
+                </div>
             <li>
                 <a href="contact.html">Contact Us</a>
             </li>
