--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,16 @@
                 <a href="index.html">Home</a>
             </li>
             <li class="active">
-                <a href="about-us.html" class="active">About Us</a>
+                <a href="about-us.html">About Us</a>
+            </li>
+            <li class="dropdown">
+                <a href="about-us.html" class="dropbtn">Services</a>
+                <div class="dropdown-content">
+                    <a href="speech-therapy.html">Speech Therapy</a>
+                    <a href="occupational-therapy.html">Occupational Therapy</a>
+                    <a href="parental-counselling.html">Parental Counselling</a>
+                    <a href="special-education.html">Special Education</a>
+                </div>
             </li>
             <li>
                 <a href="contact.html">Contact Us</a>
