--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,14 @@
             <li>
                 <a href="about-us.html">About Us</a>
             </li>
+            <li class="dropdown">
+                <a href="" class="dropbtn active">Services</a>
+                <div class="dropdown-content">
+                    <a href="speech-therapy.html">Speech Therapy</a>
+                    <a href="occupational-therapy.html">Occupational Therapy</a>
+                    <a href="parental-counselling.html">Parental Counselling</a>
+                    <a href="special-education.html">Special Education</a>
+                </div>
             <li class="active">
                 <a href="contact.html" class="active">Contact Us</a>
             </li>
