--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -32,8 +32,17 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
-            <li class="active">
+            <li>
                 <a href="about-us.html">About Us</a>
+            </li>
+            <li class="dropdown">
+                <a href="" class="dropbtn active">Services</a>
+                <div class="dropdown-content">
+                    <a href="speech-therapy.html">Speech Therapy</a>
+                    <a href="occupational-therapy.html">Occupational Therapy</a>
+                    <a href="parental-counselling.html">Parental Counselling</a>
+                    <a href="special-education.html">Special Education</a>
+                </div>
             </li>
             <li>
                 <a href="contact.html">Contact Us</a>
