--- a/submit-form.html
+++ b/submit-form.html
@@ -36,7 +36,7 @@
                 <a href="about-us.html">About Us</a>
             </li>
             <li class="dropdown">
-                <p>class="dropbtn active">Services</p>
+                <a class="dropbtn">Services</a>
                 <div class="dropdown-content">
                     <a href="speech-therapy.html">Speech Therapy</a>
                     <a href="occupational-therapy.html">Occupational Therapy</a>
