--- a/maria.html
+++ b/maria.html
@@ -36,7 +36,7 @@
                 <a href="about-us.html">About Us</a>
             </li>
             <li class="dropdown">
-                <a href="" class="dropbtn active">Services</a>
+                <a href="#" class="dropbtn active">Services</a>
                 <div class="dropdown-content">
                     <a href="speech-therapy.html">Speech Therapy</a>
                     <a href="occupational-therapy.html">Occupational Therapy</a>
