Update content to index services anchor links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <li>The productivity of the individual where his ability in the field of work is assessed. For the
                         child, "work" is the game and his learning development. </li>
                 </ul>
-                <p><a href="occupational-therapy.html">Read more</a></p>
+                <p><a href="occupational-therapy.html">Learn more about this service</a></p>
             </div>
             <div class="services-image">
                 <img src="assets/images/image-center-1.jpg"
@@ -114,7 +114,7 @@
                     behavior, emotional difficulties, difficulties in socialization or difficulties that parents face in
                     their own role.
                 </p>
-                <p><a href="parental-counselling.html">Read more</a></p>
+                <p><a href="parental-counselling.html">Learn more about this service</a></p>
             </div>
             <div class="services-bottom-2">
                 <h3>Special Education</h3>
@@ -125,7 +125,7 @@
                     education includes everything that is offered to the child and has an auxiliary role, something that
                     must be given in the school context and throughout the child's school life.
                 </p>
-                <p><a href="special-education.html">Read more</a></p>
+                <p><a href="special-education.html">Learn more about this service</a></p>
             </div>
             <div class="services-image">
                 <img src="assets/images/image-center-2.jpg" alt="mother-and-son-using-educational-toys">
