Add heading to therapy sections  and style

--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -52,7 +52,10 @@
     <section class="therapy">
 
         <div class="therapy-inner">
-            <h3>Occupational Therapy</h3>
+            <div class="therapy-heading">
+                <h2>Occupational Therapy</h2>
+            </div>
+            <h3>What is Occupational Therapy</h3>
             <p>
                 Occupational therapy is a specialized science in the field of health, which improves skills of
                 people with dysfunction in the areas of development.
