--- a/parental-counselling.html
+++ b/parental-counselling.html
@@ -51,7 +51,10 @@
     <hr>
     <section class="therapy">
         <div class="therapy-inner">
-            <h3>Parental Counselling</h3>
+            <div class="therapy-heading">
+                <h2>Parental Counselling</h2>
+            </div>
+            <h3>Parental Counselling</h3>            
             <p>Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
                 turn. In the counseling sessions, the issues that concern the parents in relation to their child,
                 the family or their own role as parents are discussed. These issues may concern issues in a child's
