--- a/special-education.html
+++ b/special-education.html
@@ -51,9 +51,12 @@
     <hr>
     <section class="therapy">
         <div class="therapy-inner">
-            <h3>Special Education</h3>
+            <div class="therapy-heading">
+                <h2>Special Education</h2>
+            </div>  
+            <h3>What is Special Education</h3>
             <p>
-                Special Education and Education is the set of educational services provided to students with
+                Special Education is the set of educational services provided to students with
                 confirmed special educational needs and with or without disabilities. With special education, an
                 effort is made for the child to join society as a non-dependent but also productive member. Special
                 education includes everything that is offered to the child and has an auxiliary role, something that
