--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -52,7 +52,10 @@
     <hr>
     <section class="therapy">
         <div class="therapy-inner">
-            <h3>Speech Therapy</h3>
+            <div class="therapy-heading">
+                <h2>Speech Therapy</h2>
+            </div>
+            <h3>What is Speech Therapy</h3>
             <p> Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
                 disorders in children and adults, whatever the cause of these disorders: neurological, developmental
                 or functional. It aims at the development of extra-verbal and verbal communication, the clarity of
