Rename cv pages and update links to abouts us

--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
                     <div class="our-team-link">
                         <h3>Maria Tsimourdagka</h3>
                         <p>Speech Therapist</p>
-                        <a href="maria.html">View full profile</a>
+                        <a href="cv=maria.html">View full profile</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <div class="our-team-link">
                         <h3>Aggeliki Teligiannidou</h3>
                         <p>Speech Therapist</p>
-                        <a href="gelly.html">View full profile</a>
+                        <a href="cv-gelly.html">View full profile</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <div class="our-team-link">
                         <h3>Elena Koundourou</h3>
                         <p>Occupational Therapist</p>
-                        <a href="elena.html">View full profile</a>
+                        <a href="cv-elena.html">View full profile</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <div class="our-team-link">
                         <h3>Katerina Gkesou</h3>
                         <p>Occupational Therapist</p>
-                        <a href="katerina.html">View full profile</a>
+                        <a href="cv-katerina.html">View full profile</a>
                     </div>
                 </div>
             </div>
