Fix typo to about-us link

--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
                     <div class="our-team-link">
                         <h3>Maria Tsimourdagka</h3>
                         <p>Speech Therapist</p>
-                        <a href="cv=maria.html">View full profile</a>
+                        <a href="cv-maria.html">View full profile</a>
                     </div>
                 </div>
             </div>
