Update content to about-us and cv-pages

--- a/about-us.html
+++ b/about-us.html
@@ -80,7 +80,7 @@
                         <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
-                        <h3>Maria Tsimourdagka</h3>
+                        <h3>Maria Tsimourdagka <span style="font-weight: 300;">MA</span></h3>
                         <p>Speech Therapist</p>
                         <a href="cv-maria.html">View full profile</a>
                     </div>
@@ -104,7 +104,7 @@
                         <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
-                        <h3>Elena Koundourou</h3>
+                        <h3>Elena Koundourou <span style="font-weight: 300;">OT MSc</span></h3>
                         <p>Occupational Therapist</p>
                         <a href="cv-elena.html">View full profile</a>
                     </div>
@@ -116,7 +116,7 @@
                         <img src="assets/images/logo-image.png" alt="">
                     </div>
                     <div class="our-team-link">
-                        <h3>Katerina Gkesou</h3>
+                        <h3>Katerina Gkesou <span style="font-weight: 300;">MSc MA</span></h3>
                         <p>Occupational Therapist</p>
                         <a href="cv-katerina.html">View full profile</a>
                     </div>
