--- a/cv-elena.html
+++ b/cv-elena.html
@@ -54,7 +54,7 @@
             <div class="cv">
                 <div class="cv-info">
                     <div class="cv-info-inner">
-                        <h2>Elena Koundourou</h2>
+                        <h2>Elena Koundourou <span style="font-weight: 300;">OT MSc</span></h2>
                         <h3>Occupational Therapist</h3>
                         <h4>Email : kentrologo@gmail.com</h4>
                     </div>
