--- a/cv-katerina.html
+++ b/cv-katerina.html
@@ -54,7 +54,7 @@
             <div class="cv">
                 <div class="cv-info">
                     <div class="cv-info-inner">
-                        <h2>Katerina Gkesou</h2>
+                        <h2>Katerina Gkesou <span style="font-weight: 300;">MSc MA</span></h2>
                         <h3>Neurodevelopmental Rehabilitation</h3>
                         <h4>Email : kentrologo@gmail.com</h4>
                     </div>
