--- a/cv-maria.html
+++ b/cv-maria.html
@@ -55,7 +55,7 @@
             <div class="cv">
                 <div class="cv-info">
                     <div class="cv-info-inner">
-                        <h2>Maria Tsimourdagka</h2>
+                        <h2>Maria Tsimourdagka <span style="font-weight: 300;">MA</span></h2>
                         <h3>Speech Therapist</h3>
                         <h4>Email : kentrologo@gmail.com</h4>
                     </div>
