Update style to cv pages

--- a/cv-katerina.html
+++ b/cv-katerina.html
@@ -53,7 +53,7 @@
         <div class="cv-inner">
             <div class="cv">
                 <div class="cv-info">
-                    <div class="cv-info-inner">
+                    <div class="cv-info-inner cv-info-katerina">
                         <h2>Katerina Gkesou <span style="font-weight: 300;">MSc MA</span></h2>
                         <h3>Neurodevelopmental Rehabilitation</h3>
                         <h4>Email : kentrologo@gmail.com</h4>
