--- a/cv-elena.html
+++ b/cv-elena.html
@@ -53,7 +53,7 @@
         <div class="cv-inner">
             <div class="cv">
                 <div class="cv-info">
-                    <div class="cv-info-inner">
+                    <div class="cv-info-inner cv-info-elena">
                         <h2>Elena Koundourou <span style="font-weight: 300;">OT MSc</span></h2>
                         <h3>Occupational Therapist</h3>
                         <h4>Email : kentrologo@gmail.com</h4>
