--- a/cv-elena.html
+++ b/cv-elena.html
@@ -33,10 +33,10 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="about-us.html">About Us</a>
+                <a href="about-us.html"  class="active">About Us</a>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropbtn active">Services</a>
+                <a href="#" class="dropbtn">Services</a>
                 <div class="dropdown-content">
                     <a href="speech-therapy.html">Speech Therapy</a>
                     <a href="occupational-therapy.html">Occupational Therapy</a>
