Rename submit-form.html. Remove empty lines to code

--- a/cv-gelly.html
+++ b/cv-gelly.html
@@ -60,8 +60,7 @@
                     </div>
                 </div>
                 <div class="cv-description">
-                    <p>
-                        Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health
+                    <p> Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health
                         and Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part
                         of her diploma work, she has conducted a pilot application of the TOPL 1 test in the Greek
                         population.
@@ -76,26 +75,21 @@
                         program that assesses the social interaction of individuals with autism spectrum disorders and
                         highlights the relationship of communication and language development.
                     </p>
-                    <p>She participated in the workshop on Problems that appear in the understanding and production of
-                        spoken
-                        language, in relation to the special characteristics of the Greek language. Their assessment,
-                        diagnosis
-                        and treatment.
+                    <p> She participated in the workshop on Problems that appear in the understanding and production of
+                        spoken language, in relation to the special characteristics of the Greek language. Their
+                        assessment, diagnosis and treatment.
                     </p>
-                    <p>She has attended numerous seminars such as Stuttering in childhood, Evaluation - Therapeutic
-                        Intervention
-                        of Voice Disorders, Speech Therapy Massage, Vision and Learning, Vision and Autism, Children's
-                        Footprint, Messy Play: Sensory play as a means of development, etc.
+                    <p> She has attended numerous seminars such as Stuttering in childhood, Evaluation - Therapeutic
+                        Intervention of Voice Disorders, Speech Therapy Massage, Vision and Learning, Vision and Autism,
+                        Children's Footprint, Messy Play: Sensory play as a means of development, etc.
                     </p>
-                    <p>Finally, she has published in e-poster format at the 13th International Conference on Cochlear
-                        Implants
-                        (Munich, Germany June 18-21, 2014) her research paper on "Comparison of speech discrimination
-                        and
-                        comprehension of cochlear implant users: computer produced speech versus live voice"
+                    <p> Finally, she has published in e-poster format at the 13th International Conference on Cochlear
+                        Implants (Munich, Germany June 18-21, 2014) her research paper on "Comparison of speech
+                        discrimination and comprehension of cochlear implant users: computer produced speech versus live
+                        voice"
                     </p>
-                    <p>She continues to be informed and educated on new scientific methods and developments concerning
-                        the
-                        science of speech therapy.
+                    <p> She continues to be informed and educated on new scientific methods and developments concerning
+                        the science of speech therapy.
                     </p>
                 </div>
             </div>
