--- a/cv-katerina.html
+++ b/cv-katerina.html
@@ -60,9 +60,7 @@
                     </div>
                 </div>
                 <div class="cv-description">
-
-                    <p>
-                        Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
+                    <p> Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
                         Department of Physical Education and Sports Science (TEFAA) with a specialization in Special
                         Physical Education. She continued her specialization with two master's degrees. The first comes
                         from the Master's Program "Kinesiology" TEFAA Serres where he dealt with the effect of
@@ -71,15 +69,17 @@
                         understanding of the emotions of others through of Psychokinetic by children with Autism
                         Spectrum Disorder.
                     </p>
-                    <p>In terms of training, she has completed the Sensory Integration training, while her personal
+                    <p> In terms of training, she has completed the Sensory Integration training, while her personal
                         portfolio includes the Baby Swimming Learning Seminar, the Psychokinetic-Musicomotor Education
                         E.K.P.A seminar and the Hellenic Society Halliwic seminar. Swimming and Therapy for People with
                         Special Needs. She has also attended the 216-hour Professional Yoga Learning Departments
-                        Curriculum specializing in Children's Yoga.</p>
-                    <p>She is specialized in PECS and TEEACH methods, Social Histories, PWD Behavior Management methods,
+                        Curriculum specializing in Children's Yoga.
+                    </p>
+                    <p> She is specialized in PECS and TEEACH methods, Social Histories, PWD Behavior Management methods,
                         Kinetic Learning and the Cognitive Orientation Approach to the daily execution of the CO-OP
-                        Project (Cognitive Orientation to daily Occupational Performance).</p>
-                    <p>From 2005 to 2018, she worked as an external partner in kindergartens and PWD structures,
+                        Project (Cognitive Orientation to daily Occupational Performance).
+                    </p>
+                    <p> From 2005 to 2018, she worked as an external partner in kindergartens and PWD structures,
                         organizing Psychomotor and Adapted Physical Activity programs for children with mobility
                         difficulties. Since 2007, he has been delivering personalized programs of Kinetic Intervention,
                         Occupational Therapy and Hydrotherapy at home in collaboration with private and public swimming
