--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -72,8 +72,6 @@
                 <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
                     perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
             </ul>
-
-
             <p>Visual and auditory perception (the individual's perception of visual and auditory stimuli) and
                 stereocognition (determining the size, texture and shape of an object).</p>
             <ul>
@@ -84,16 +82,13 @@
                 <li>The productivity of the individual where his ability in the field of work is assessed. For the
                     child, "work" is the game and his learning development. </li>
             </ul>
-
             <h4>Occupational Therapy Intervention
             </h4>
-            <p>
-                The occupational therapist in accordance with these areas evaluates the functionality of the
+            <p> The occupational therapist in accordance with these areas evaluates the functionality of the
                 individual and trains the skills he must have in order to cope satisfactorily with the demands of
                 his daily life.</p>
-
             <h4>Pediatric Occupational Therapy and Intervention</h4>
-            <p>Pediatric occupational therapy deals with disorders that hinder the normal development of children.
+            <p> Pediatric occupational therapy deals with disorders that hinder the normal development of children.
                 There, the occupational therapist, using play as the main medium, deals with training the child's skills
                 related to cognitive and learning difficulties, movement difficulties and behavioral problems.</p>
             <h4>In which areas does Occupational Therapy intervene?</h4>
