--- a/special-education.html
+++ b/special-education.html
@@ -55,8 +55,7 @@
                 <h2>Special Education</h2>
             </div>  
             <h3>What is Special Education</h3>
-            <p>
-                Special Education is the set of educational services provided to students with
+            <p> Special Education is the set of educational services provided to students with
                 confirmed special educational needs and with or without disabilities. With special education, an
                 effort is made for the child to join society as a non-dependent but also productive member. Special
                 education includes everything that is offered to the child and has an auxiliary role, something that
@@ -85,9 +84,7 @@
                 <li>self service</li>
                 <li>social skills.</li>
             </ul>
-
-
-            <p>The special educator usually follows the following steps:</p>
+            <h4>The special educator usually follows the following steps:</h4>
             <ul>
                 <li>He thoroughly assesses the child with weighted and unweighted tools that examine all of his skills
                     and sets the program's goals.</li>
