--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,14 @@
         </ul>
     </header>
     <hr>
+    
+    <!-- Contact form-->
+
     <div class="form-container-outer">
         <div class="form-container-bg">
             <div class="form-container-mid">
                 <div class="form-container">
-                    <form action="submit-form.html" target="_blank" method="GET" class="signup-form">
+                    <form action="thank-you-pg.html" target="_blank" method="GET" class="signup-form">
                         <div class="form-control form-first">
                             <label for="fname">First Name:<span class="required-field">*</span></label>
                             <input type="text" id="fname" name="first_name" class="text-input" required>
